*Empty MediaWiki Message*

--- a/Juul.mw
+++ b/Juul.mw
@@ -2,6 +2,8 @@
 
 '''Juul''' of '''Midwinter''' bint de namen vöär et germaanske feest dat de [[zunnewende|wintersünnewende]] vyrt. Et duurt twaalv nachten en darteen dagen, en dårümme wörd et feest ouk wal med de ''Twaalv Nachten'' anedüded. Altyd begünt et up de körste dag van et jår, wat in unse [[gregoriaanse kelender|gregoriaanske kalenderreakenen]]  [[21 december]] is. Vanof dissen dag stopten vöär de germanen vöär twaalv nachten de tyd, ümme up 1 januari wear in de nye tyd te kummen wår as de sünne sötyns an wearümme kümt.
 
+Der is neet so verskrikkelik vöäle van wys uut de germaanske oldheid, mar vandage an den dag beståt der nog unmundig vöäle gebruken rund disse tyd. Wår as düdelik later een beatyn verchristelikt is.
+
 ===Grunddachtenisse===
 Geyneyne weat natuurlik precys wår as et syn eyrste förm had, mar wårskynlik geyt et al wal düsenden jåren terügge. Et is in te denken dat, vöäral in de meyst noordske landen, de winters arg düüster en kold waren. Vroager waren sy vöäl animistisk en sjamanistisk. Dat beteakend dat sy gelöyveden dat alles in de wearld een geyst of een leavenskracht had. Sjamanen waren de mensken dee as med disse geysten en krachten oaverweg könden. Der wörden gelöyved dat wanneyr as de bladergyns van de boumen vöylen en de deren vordtröyken, dat disse leavenskrachten uut de natuur tröyk. En dår reageyreden sy up med ümme disse leavenskrachten wearümme te krygen. So dat de plantyns wear gröieden en de sünne wearümme sol kummen. Nu bint der oaver heyl Europa en up vöäle andere steades up de wearld gebruken, dee te maken hebbet med et wearümme krygen van de vrüchtbaarheid. Net as by et keltiske [[Samhain]] wördden der edachted dat in disse düüsternisse van de winter de lyne med de andere wearlden kört was. Kwåde geysten en krachten künden in unse wearld kummen, mar ouk estürven vöärolder.
 
