--- a/Juul.mw
+++ b/Juul.mw
@@ -8,7 +8,7 @@ Der is neet so verskrikkelik vöäle van wys uut de germaanske oldheid, mar vand
 Geyneyne weat natuurlik precys wår as et syn eyrste förm had, mar wårskynlik geyt et al wal düsenden jåren terügge en uut verskillende traditys ekummen. Et is in te denken dat, vöäral in de meyst noordske landen, de winters slim düüster en kold waren. Vroager waren sy vöäl animistisk en sjamanistisk. Dat beteakend dat sy gelöyveden dat alles in de wearld een geyst of een leavenskracht had. Sjamanen waren de mensken dee as med disse geysten en krachten oaverweg könden. Der wörden gelöyved dat wanneyr as de bladergyns van de boumen vöylen en de deren vordtröyken, dat disse leavenskrachten uut de natuur tröyk. En dår reageyreden sy up med ümme disse leavenskrachten wearümme te krygen. So dat de plantyns wear gröieden en de sünne wearümme sol kummen. Nu bint der oaver heyl Europa en up vöäle andere steades up de wearld gebruken, dee te maken hebbet med et wearümme krygen van de vrüchtbaarheid. Net as by et keltiske [[Samhain]] wördden der edachted dat in disse düüsternisse van de winter de lyne med de andere wearlden kört was. Kwåde geysten en krachten künden in unse wearld kummen, mar ouk estürven vöärolder.
 
 ===kearlsbunden===
-De germanen hadden in ear gemeynskappen ouk kearlsbunden. Dissen bestünden uut junge kearltyns dee as up vroage leavtyd der vöär eköäsen hebbet ümme ear leaven der an te wyden. So een gruup was ewyd an den krygers- en doudsgod [[Woden]] (noordsk: Odin). Mar Woden was sowal den god van de krygers as van de wysheid, dichterye en de drunkenskap. As so een gruup in trance wolden kummen, dan söypen se machtig vöäle beer of namen bepålde krüden en paddestolen. En künneden sy as van unwys tekeyr gån in de stryd. ''Tekeyr gån as een beyst''; dat is wal een gode bedüding dårvöär, want disse lüde kleydeden sich vake in vellen van bearen en eaverswynen. Se stelleden sich dan ouk vöär dat sy dat beyst echt waren. So as de wyking[[beserkers]]. Disse kearlsbunden waren elite-krygers. Mar ouk mosden sy samenwarken med sjamamen vöär rituelen. 
+De germanen hadden in ear gemeynskappen ouk kearlsbunden. Dissen bestünden uut junge kearltyns dee as up vroage leavtyd der vöär eköäsen hebbet ümme ear leaven der an te wyden. So een gruup was ewyd an den krygers- en doudsgod [[Woden]] (noordsk: Odin). Mar Woden was sowal den god van de krygers as van de wysheid, dichterye en de drunkenskap. (Vergelyk [[Dionysus]]. As so een gruup in trance wolden kummen, dan söypen se machtig vöäle beer of namen bepålde krüden en paddestolen. En künneden sy as van unwys tekeyr gån in de stryd. ''Tekeyr gån as een beyst''; dat is wal een gode bedüding dårvöär, want disse lüde kleydeden sich vake in vellen van bearen en eaverswynen. Se stelleden sich dan ouk vöär dat sy dat beyst echt waren. So as de wyking[[beserkers]]. Disse kearlsbunden waren elite-krygers. Mar ouk mosden sy samenwarken med sjamamen vöär rituelen. 
 
 Tydens de dunkerste dage van et jår smeareden sy hümsülv den kop swart med root en aske. Want dat beylden de douden uut, dee as rundwaren in dee tyd. So waren sy neet te herkennen as leavende lüde. In disse vermumming en drunkenskap raasden sy döär de busken en de gouwen hean. Maakten vöäl kabaal med hoarn bloazen, kettens en bellen, ümme so de kwåde krachten up ofstand te holden. Sy smearden sy junge dearntyns under et root en aske, ümme ear vrüchtbaarheyd te geaven, en via ear de grund.
 
