--- a/Juul.mw
+++ b/Juul.mw
@@ -19,7 +19,9 @@ Et burenvolk had van vöärend al syn oogst binnen ehaled, et vleisk in esolted 
 
 ===Traditys===
 Vöäle van disse gedachtenissen, gebruken en symbolen bint up vöäle steades up de wearld te vinden. En in et juulfeest heb y ouk verskillende traditys by mekare, so as wårskynlik elk feest en tradity uutendelik een mengelmoos is van verskillende dinge. As y byvöärbeeld kykt når de kearls dee as elk midwinter med derenhüden en hoarns up den kop rundzwarvet; dår bint al grotskilderings van bekend, dee stammet uut wat düsenden jåren eleaden. Vandage an den dag geböärt et noch, kyk mar når de [[Krampus|krampussen]] in de Alpen (Oustenryk) en de Swarte Peten in Neaderland. 
-Groute vüren ansteaken dat geböärt sowal in de winter as in et vöärjår, oaver heyl Europa
+Groute vüren ansteaken dat geböärt sowal in de winter as in et vöärjår, oaver heyl Europa. 
+
+De greekske god Pan was ouk een god den oaver de wilde deren heyrsten, en sag der uut as een halv menske, halv bok. So ouk de keltisken god Cernunnos, god van et wold, wilde deren en vrüchtbaarheid by kearls. Hy had een hertengewei up den kop.
 
 ==karst==
 Karst is noch wal et beste vöärbeyld van verskillende traditys dee as eyne feest wördden. 
