--- a/Juul.mw
+++ b/Juul.mw
@@ -4,7 +4,7 @@
 
 Der is neet so verskrikkelik vöäle van wys uut de germaanske oldheid, mar vandage an den dag beståt der nog unmundig vöäle gebruken rund disse tyd. Wår as düdelik later een beatyn verchristelikt is.
 
-===Grunddachtenisse===
+==Grunddachtenisse==
 Geyneyne weat natuurlik precys wår as et syn eyrste förm had, mar wårskynlik geyt et al wal düsenden jåren terügge en uut verskillende traditys ekummen. Et is in te denken dat, vöäral in de meyst noordske landen, de winters slim düüster en kold waren. Vroager waren sy vöäl animistisk en sjamanistisk. Dat beteakend dat sy gelöyveden dat alles in de wearld een geyst of een leavenskracht had. Sjamanen waren de mensken dee as med disse geysten en krachten oaverweg könden. Der wörden gelöyved dat wanneyr as de bladergyns van de boumen vöylen en de deren vordtröyken, dat disse leavenskrachten uut de natuur tröyk. En dår reageyreden sy up med ümme disse leavenskrachten wearümme te krygen. So dat de plantyns wear gröieden en de sünne wearümme sol kummen. Nu bint der oaver heyl Europa en up vöäle andere steades up de wearld gebruken, dee te maken hebbet med et wearümme krygen van de vrüchtbaarheid. Net as by et keltiske [[Samhain]] wördden der edachted dat in disse düüsternisse van de winter de lyne med de andere wearlden kört was. Kwåde geysten en krachten künden in unse wearld kummen, mar ouk estürven vöärolder.
 
 ===uplössing===
