--- a/Juul.mw
+++ b/Juul.mw
@@ -12,7 +12,10 @@ Geyneyne weat natuurlik precys wår as et syn eyrste förm had, mar wårskynlik 
 ===Kabaal maken===
 Elk jår up [[old en ny]] gåt lüde in Europa kabaal maken med vüürwark en karbit sketen. Vüürwark müt mooi weasen en karbit müt hard knappen. Et karbit sketen is een oust-neaderlandsk gebruuk, wat ouk in wat deylen in Düütskland geböäret. [[Midwinterhoarnblåsen]] wörd üm desülvde reyden (van vroager uut) ouk edåne. Want al disse förmen hebbet in disse tyd et dool ümme et kwåd vord te jagen en de sünne wearümme te ropen. Lös dårvan had de midwinterhoarn ouk deenst as berichten oaver vearre te senden.
 
-==Germaanske kearlsbunden==
+===Verkleyden===
+In heyl Europa vind y rund disse tyd traditys, wår is lüde sich med root up et kop smearet. So wörden sy neet meyr herkent. In de Alpen heb y de krampussen, dee as med hoarns up den kop en groute bellen up de rügge de buul unveilig maket. In Düütskland heb y Knecht Ruprecht den nöäst Sankt Nikloas löpt, as hülpyn. Den heb een swarten kop, een lange jasse an en een rode in de handen. In Neaderland heb y Sünterklås en syn swarte peten. En so bint der noch meyr van dit soortgelyke gebruken.
+
+===Germaanske kearlsbunden===
 De germanen hadden in ear gemeynskappen ouk kearlsbunden. Dissen bestünden uut junge kearltyns dee as up vroage leavtyd der vöär eköäsen hebbet ümme ear leaven der an te wyden. So een gruup was ewyd an den krygers- en doudsgod [[Woden]] (noordsk: Odin). Mar Woden was sowal den god van de krygers as van de wysheid, dichterye en de drunkenskap. (Vergelyk [[Dionysus]]. As so een gruup in trance wolden kummen, dan söypen se machtig vöäle beer of namen bepålde krüden en paddestolen. En künneden sy as van unwys tekeyr gån in de stryd. ''Tekeyr gån as een beyst''; dat is wal een gode bedüding dårvöär, want disse lüde kleydeden sich vake in vellen van bearen en eaverswynen. Se stelleden sich dan ouk vöär dat sy dat beyst echt waren. So as de wyking[[beserkers]]. Disse kearlsbunden waren elite-krygers. Mar ouk mosden sy samenwarken med sjamamen vöär rituelen. 
 
 Tydens de dunkerste dage van et jår smeareden sy hümsülv den kop swart med root en aske. Want dat beylden de douden uut, dee as rundwaren in dee tyd. So waren sy neet te herkennen as leavende lüde. In disse vermumming en drunkenskap raasden sy döär de busken en de gouwen hean. Maakten vöäl kabaal med hoarn bloazen, kettens en bellen, ümme so de kwåde krachten up ofstand te holden. Sy smearden sy junge dearntyns under et root en aske, ümme ear vrüchtbaarheyd te geaven, en via ear de grund.
