--- a/Juul.mw
+++ b/Juul.mw
@@ -31,10 +31,10 @@ Groute vüren ansteaken dat geböärt sowal in de winter as in et vöärjår, oa
 
 De greekske god Pan was ouk een god den oaver de wilde deren heyrsten, en sag der uut as een halv menske, halv bok. So ouk de keltisken god Cernunnos, god van et wold, wilde deren en vrüchtbaarheid by kearls. Hy had een hertengewei up den kop.
 
-==karst==
+===karst===
 Karst is noch wal et beste vöärbeyld van verskillende traditys dee as eyne feest wördden. 
 
-===Woordherkumts===
+==Woordherkumts==
 
 
 
