--- a/Juul.mw
+++ b/Juul.mw
@@ -32,7 +32,7 @@ Groute vüren ansteaken dat geböärt sowal in de winter as in et vöärjår, oa
 De greekske god Pan was ouk een god den oaver de wilde deren heyrsten, en sag der uut as een halv menske, halv bok. So ouk de keltisken god Cernunnos, god van et wold, wilde deren en vrüchtbaarheid by kearls. Hy had een hertengewei up den kop.
 
 ===karst===
-Karst is noch wal et beste vöärbeyld van verskillende traditys dee as eyne feest wördden. 
+Karst is noch wal et beste vöärbeyld van verskillende traditys dee as eyne feest wördden. Ümdat et midwinterfeest so slim in de west- en noordeuropeanen sat, kon de karke dissen neet ofskavven. Wat se döäden was kyken når gelykende ideyen tüsken de heidenen en de christenen. Jesus is jår et licht wat in de düüsternisse kwamt, so as unse vöärolders de sünne wearümme in de düüsternisse hebben wolden. De unwyse jungevolk, dee verkleed güngen as krygers en douden, wördden döär den heiligen Sint Nicolaos etemmed. En verwördden töt düvelske weasens dee döär ekettend bint. Et hoarn blåsen döyd y nu ümme et Christuskind te verwelkummen. Sülvs de karstboum wörd een verwysing når de Dree-eynheid, döär syn dreehokige förm.
 
 ==Woordherkumts==
 
