--- a/Juul.mw
+++ b/Juul.mw
@@ -23,7 +23,7 @@ De germanen hadden in ear gemeynskappen ouk kearlsbunden. Dissen bestünden uut 
 
 Tydens de dunkerste dage van et jår smeareden sy hümsülv den kop swart med root en aske. Want dat beylden de douden uut, dee as rundwaren in dee tyd. So waren sy neet te herkennen as leavende lüde. In disse vermumming en drunkenskap raasden sy döär de busken en de gouwen hean. Maakten vöäl kabaal med hoarn bloazen, kettens en bellen, ümme so de kwåde krachten up ofstand te holden. Sy smearden sy junge dearntyns under et root en aske, ümme ear vrüchtbaarheyd te geaven, en via ear de grund.
 
-In latere verhalen bint disse lüde noch ehöäged as ''De Wilde Jacht''.
+In latere verhalen bint disse lüde noch ehöägend as ''De Wilde Jacht''.
 
 ==symbolik==
 Et burenvolk had van vöärend al syn oogst binnen ehaled, et vleisk in esolted en de deakentyns ebreied. Sy mosden de winter mar döär seen te kummen. Ümdat et kold en nat is buten, was et logisk dat sy binnen et was geselliger maakten. Med lichtyns en dennentakken. Want dennentakken blyvet et heyle jår gröön, en dat düt in de kolde dage u der an höägen dat et ooit wear gröön buten wörd. Et licht düt u höagen når de warmte van de sünne in et [[summer]]. Tydens disse twaalv dage wördden der dan ouk vöäl groute vüren an estöäken, en de heyle tyd verdan an-eholden. Want solange as den sünne neet skent, dan mütte wy et sülv mar doon. Nu noch wörd der in de noordske landen ''juulblokken'' ehakked en de heyle karsttyd up-estoaked. In de westerske landen heb y noch ait vöäle midwintervüren.
