--- a/Juul.mw
+++ b/Juul.mw
@@ -1,6 +1,6 @@
 [[Bestaand:Chambers Yule Log.png|thumb|250px|Et Juulblok wördt döär kearls uut et wold ehaald, de vrouwe van et huus (of dochter) stekt et blok an med holtskole van et juulblok van et vöärige jår, 1832]]
 
-'''Juul''' of '''Midwinter''' bint de namen vöär et germaanske feest dat de [[zunnewende|wintersünnewende]] vyrt. Et duurt twaalv nachten en darteen dagen, en dårümme wörd et feest ouk wal med de ''Twaalv Nachten'' anedüded. Altyd begünt et up de körste dag van et jår, wat in unse [[gregoriaanse kelender|gregoriaanske kalenderreakenen]]  [[21 december]] is. Vanof dissen dag stopten vöär de germanen vöär twaalv nachten de tyd, ümme up 1 januari wear in de nye tyd te kummen wår as de sünne sötyns an wearümme kümt.
+'''Juul''' of '''Midwinter''' bint de namen vöär et germaanske feest dat de [[zunnewende|wintersünnewende]] bevyrt. Et duurt twaalv nachten, en dårümme wörd et feest ouk wal med de ''Twaalv Nachten'' anedüded. Altyd begünt et up de körtsten dag van et jår, wat in unse [[gregoriaanse kelender|gregoriaanske kalenderreakenen]]  [[21 december]] is. Vanof dissen dag stopten vöär de germanen vöär twaalv nachten de tyd, ümme up 1 januari wear in de nye tyd te kummen wår as de sünne sötyns an wearümme kümt.
 
 Der is neet so verskrikkelik vöäle van wys uut de germaanske oldheid, mar vandage an den dag beståt der nog unmundig vöäle gebruken rund disse tyd. Wår as düdelik later een beatyn verchristelikt is.
 
