--- a/Juul.mw
+++ b/Juul.mw
@@ -13,7 +13,7 @@ Geyneyne weat precys wår as et syn eyrste förm had, mar wårskynlik geyt et al
 Elk jår up [[old en ny]] gåt lüde in Europa kabaal maken med vüürwark en karbit sketen. Vüürwark müt mooi weasen en karbit müt hard knappen. Et karbit sketen is een oust-neaderlandsk gebruuk, wat ouk in wat deylen in Düütskland geböäret. [[Midwinterhoarnblåsen]] wörd üm desülvde reyden (van vroager uut) ouk edåne. Want al disse förmen hebbet in disse tyd et dool ümme et kwåd vord te jagen en de sünne wearümme te ropen. Lös dårvan had de midwinterhoarn ouk deenst as berichten oaver verre te doon.
 
 ===Verkleyden===
-In heyl Europa vind y rund disse tyd traditys, wår is lüde sich med root up et kop smearet. So wörden sy neet meyr herkent. In de Alpen heb y de krampussen, dee as med hoarns up den kop en groute bellen up de rügge de buul unveilig maket. In Düütskland heb y Knecht Ruprecht den nöäst Sankt Nikloas löpt, as hülpyn. Den heb een swarten kop, een lange jasse an en een rode in de handen. In Neaderland heb y Sünterklås en syn swarte peten. En so bint der noch meyr van dit soortgelyke gebruken.
+In heyl Europa vind y rund disse tyd traditys, wår is lüde sich med root up den kop smearet. So wörden sy neet meyr herkent. In de Alpen heb y de krampussen, dee as med hoarns up den kop en groute bellen up de rügge de buul unveilig maket. In Düütskland heb y Knecht Ruprecht den nöäst Sankt Niklas löpt, as hülpyn. Den hevt een swarten kop, een lange jasse an en een rode in de handen. In Neaderland heb y Sünterklås en syn swarte peten. En so bint der noch meyr van disse soortgelyke gebruken.
 
 ===Vüür===
 In olde tyden wördden up de körsten dag een grout ritueel vüür estöäken. Van disse båke güngen der når elk hüsyn een vüürtyn hean, ümme de kachel der med an te krygen. Disse vüren mosden al de twaalv nachten an eholden wörden. Anders had y unheil oaver u hean ehaled.
