--- a/Juul.mw
+++ b/Juul.mw
@@ -18,6 +18,9 @@ In heyl Europa vind y rund disse tyd traditys, wår is lüde sich med root up de
 ===Vüür===
 In olde tyden wördden up de körsten dag een grout ritueel vüür estöäken. Van disse båke güngen der når elk hüsyn een vüürtyn hean, ümme de kachel der med an te krygen. Disse vüren mosden al de twaalv nachten an eholden wörden. Anders had y unheil oaver u hean ehaled.
 
+===Samen kummen===
+In disse kolde dage kummet lüde by mekare ümme mekare geselskop te holden. Sy gåt lekker eaten en supen. Döär amerikaanske invloden hevt et karstfeest dan ouk de beteakenisse ekreygen van by mekare kummen en lekker eaten. Nå mekare ümme kyken in disse tyd is noch belangryker dan anders. In de germaanske oldheid had y groute suupfeesten. Der wördden twaalv nachte lange alleyne mar edansed, esöypen en evryen by groute vüren. Sy offereden eaverswynen an den god Freyr, ümme et vervolgens up te eaten.
+
 ===Germaanske kearlsbunden===
 De germanen hadden in ear gemeynskappen ouk kearlsbunden. Dissen bestünden uut junge kearltyns dee as up vroage leavtyd der vöär eköäsen hebbet ümme ear leaven der an te wyden. So een gruup was ewyd an den krygers- en doudsgod [[Woden]] (noordsk: Odin). Mar Woden was sowal den god van de krygers as van de wysheid, dichterye en de drunkenskap. (Vergelyk [[Dionysus]]. As so een gruup in trance wolden kummen, dan söypen se machtig vöäle beer of namen bepålde krüden en paddestolen. En künneden sy as van unwys tekeyr gån in de stryd. ''Tekeyr gån as een beyst''; dat is wal een gode bedüding dårvöär, want disse lüde kleydeden sich vake in vellen van bearen en eaverswynen. Se stelleden sich dan ouk vöär dat sy dat beyst echt waren. So as de wyking[[beserkers]]. Disse kearlsbunden waren elite-krygers. Mar ouk mosden sy samenwarken med sjamamen vöär rituelen. 
 
