--- a/Juul.mw
+++ b/Juul.mw
@@ -22,7 +22,7 @@ In olde tyden wördden up de körsten dag een grout ritueel vüür estöäken. V
 In disse kolde dage kummet lüde by mekare ümme mekare geselskop te holden. Sy gåt lekker eaten en supen. Döär amerikaanske invloden hevt et karstfeest dan ouk de beteakenisse ekreygen van by mekare kummen en lekker eaten. Nå mekare ümme kyken in disse tyd is noch belangryker dan anders. In de germaanske oldheid had y groute suupfeesten. Der wördden twaalv nachte lange alleyne mar edansed, esöypen en evryen by groute vüren. Sy offereden eaverswynen an den god Freyr, ümme et vervolgens up te eaten.
 
 ===Germaanske kearlsbunden===
-De germanen hadden in ear gemeynskappen ouk kearlsbunden. Dissen bestünden uut junge kearltyns dee as up vroage leavtyd der vöär eköäsen hebbet ümme ear leaven der an te wyden. So een gruup was ewyd an den krygers- en doudsgod [[Woden]] (noordsk: Odin). Mar Woden was sowal den god van de krygers as van de wysheid, dichterye en de drunkenskap. (Vergelyk [[Dionysus]]. As so een gruup in trance wolden kummen, dan söypen se machtig vöäle beer of namen bepålde krüden en paddestolen. En künneden sy as van unwys tekeyr gån in de stryd. ''Tekeyr gån as een beyst''; dat is wal een gode bedüding dårvöär, want disse lüde kleydeden sich vake in vellen van bearen en eaverswynen. Se stelleden sich dan ouk vöär dat sy dat beyst echt waren. So as de wyking[[beserkers]]. Disse kearlsbunden waren elite-krygers. Mar ouk mosden sy samenwarken med sjamamen vöär rituelen. 
+De germanen hadden in ear gemeynskappen ouk kearlsbunden. Dissen bestünden uut junge kearltyns dee as up vroage leavtyd der vöär eköäsen hebbet ümme ear leaven der an te wyden. So een gruup was ewyd an den krygers- en doudsgod [[Woden]] (noordsk: Odin). Mar Woden was sowal den god van de krygers as van de wysheid, dichterye en de drunkenskap. (Vergelyk [[Dionysus]]). As so een gruup in trance wolden kummen, dan söypen se machtig vöäle beer of namen bepålde krüden en paddestolen. En künneden sy as van unwys tekeyr gån in de stryd. ''Tekeyr gån as een beyst''; dat is wal een gode bedüding dårvöär, want disse lüde kleydeden sich vake in hüden van bearen en eaverswynen. Se stelleden sich dan ouk vöär dat sy dat beyst echt waren. So as de wyking[[beserkers]]. Disse kearlsbunden waren elite-krygers. Mar ouk mosden sy samenwarken med sjamamen vöär rituelen. 
 
 Tydens de dunkerste dage van et jår smeareden sy hümsülv den kop swart med root en aske. Want dat beylden de douden uut, dee as rundwaren in dee tyd. So waren sy neet te herkennen as leavende lüde. In disse vermumming en drunkenskap raasden sy döär de busken en de gouwen hean. Maakten vöäl kabaal med hoarn bloazen, kettens en bellen, ümme so de kwåde krachten up ofstand te holden. Sy smearden sy junge dearntyns under et root en aske, ümme ear vrüchtbaarheyd te geaven, en via ear de grund.
 
