--- a/Juul.mw
+++ b/Juul.mw
@@ -35,7 +35,7 @@ Et burenvolk had van vöärend al syn oogst binnen ehaled, et vleisk in esolted 
 Vöäle van disse gedachtenissen, gebruken en symbolen bint up vöäle steades up de wearld te vinden. En in et juulfeest heb y ouk verskillende traditys by mekare, so as wårskynlik elk feest en tradity uutendelik een mengelmoos is van verskillende dinge. As y byvöärbeeld kykt når de kearls dee as elk midwinter med derenhüden en hoarns up den kop rundzwarvet; dår bint al grotskilderings van bekend, dee stammet uut wat düsenden jåren eleaden. Vandage an den dag geböärt et noch, kyk mar når de [[Krampus|krampussen]] in de Alpen (Oustenryk) en de Swarte Peten in Neaderland. 
 Groute vüren ansteaken dat geböärt sowal in de winter as in et vöärjår, oaver heyl Europa. 
 
-De greekske god Pan was ouk een god den oaver de wilde deren heyrsten, en sag der uut as een halv menske, halv bok. So ouk de keltisken god Cernunnos, god van et wold, wilde deren en vrüchtbaarheid by kearls. Hy had een hertengewei up den kop.
+De greekske god Pan was een god den oaver de wilde deren heyrsten, en sag der uut as een halv menske, halv bok. So ouk de keltisken god Cernunnos, god van et wold, wilde deren en vrüchtbaarheid by kearls. Hy had een hertengewei up den kop.
 
 ===karst===
 Karst is noch wal et beste vöärbeyld van verskillende traditys dee as eyne feest wördden. Ümdat et midwinterfeest so slim in de west- en noordeuropeanen sat, kon de karke dissen neet ofskavven. Wat se döäden was kyken når gelykende ideyen tüsken de heidenen en de christenen. Jesus is jår et licht wat in de düüsternisse kwamt, so as unse vöärolders de sünne wearümme in de düüsternisse hebben wolden. De unwyse jungevolk, dee verkleed güngen as krygers en douden, wördden döär den heiligen Sint Nicolaos etemmed. En verwördden töt düvelske weasens dee döär ekettend bint. Et hoarn blåsen döyd y nu ümme et Christuskind te verwelkummen. Sülvs de karstboum wörd een verwysing når de Dree-eynheid, döär syn dreehokige förm.
