--- a/Juul.mw
+++ b/Juul.mw
@@ -2,7 +2,7 @@
 
 '''Juul''' of '''Midwinter''' bint de namen vöär et germaanske feest dat de [[zunnewende|wintersünnewende]] bevyrt. Et duurt twaalv nachten, en dårümme wörd et feest ouk wal med de ''Twaalv Nachten'' anedüded. Altyd begünt et up de körtsten dag van et jår, wat in unse [[gregoriaanse kelender|gregoriaanske kalenderreakenen]]  [[21 december]] is. Vanof dissen dag stopten vöär de germanen vöär twaalv nachten de tyd, ümme up 1 januari wear in de nye tyd te kummen wår as de sünne sötyns an wearümme kümt.
 
-Der is neet so verskrikkelik vöäle van wys uut de germaanske oldheid, mar vandage an den dag beståt der nog unmundig vöäle gebruken rund disse tyd. Wår as düdelik later een beatyn verchristelikt is.
+Der is neet so verskrikkelik vöäle van wys uut de germaanske oldheid, mar vandage an den dag beståt der nog unmundig vöäle gebruken rund disse tyd. Wår as düdelik later een beatyn verchristelikt is. Et karstfeest hevt in de christelike tyd et heidenske juulfeest oaver enöämen. Der wörd nu ouk wal espröäken van ''de twaalv dage van karst'': dat geyt van eyrsten karstdag (25 december) töt [[Dree-Köningen]] (6 januari).
 
 ==Grunddachtenisse==
 Geyneyne weat precys wår as et syn eyrste förm had, mar wårskynlik geyt et al wal düsenden jåren terügge en uut verskillende traditys ekummen. Et is in te denken dat, vöäral in de meyst noordske landen, de winters slim düüster en kold waren. Vroager waren sy vöäl animistisk en sjamanistisk kwå wearldbekyk. Dat beteakend dat sy gelöyveden dat alles in de wearld een geyst of een leavenskracht had. Sjamanen waren de mensken dee as med disse geysten en krachten oaverweg könden. Der wörden gelöyved dat wanneyr as de bladergyns van de boumen vöylen en de deren vordtröyken, dat disse leavenskrachten uut de natuur tröyk. En dår reageyreden sy up döär disse leavenskrachten wearümme probeyren te krygen. So dat de plantyns wear gröiet en de sünne wearümme sol kummen. Nu bint der oaver heyl Europa en up vöäle andere steades up de wearld gebruken, dee te maken hebbet med et wearümme krygen van de vrüchtbaarheid. Net as by et keltiske [[Samhain]] wördden der edachted dat in disse düüsternisse van de winter de lyne med de andere wearlden kört was. Kwåde geysten en krachten künden in unse wearld kummen, mar ouk estürven vöärolder.
@@ -21,7 +21,7 @@ In olde tyden wördden up de körsten dag een grout ritueel vüür estöäken. V
 ===Samen kummen===
 In disse kolde dage kummet lüde by mekare ümme mekare geselskop te holden. Sy gåt lekker eaten en supen. Döär amerikaanske invloden hevt et karstfeest dan ouk de beteakenisse ekreygen van by mekare kummen en lekker eaten. Nå mekare ümme kyken in disse tyd is noch belangryker dan anders. In de germaanske oldheid had y groute suupfeesten. Der wördden twaalv nachte lange alleyne mar edansed, esöypen en evryen by groute vüren. Sy offereden eaverswynen an den god Freyr, ümme et vervolgens up te eaten.
 
-===Germaanske kearlsbunden===
+==Germaanske kearlsbunden==
 De germanen hadden in ear gemeynskappen ouk kearlsbunden. Dissen bestünden uut junge kearltyns dee as up vroage leavtyd der vöär eköäsen hebbet ümme ear leaven der an te wyden. So een gruup was ewyd an den krygers- en doudsgod [[Woden]] (noordsk: Odin). Mar Woden was sowal den god van de krygers as van de wysheid, dichterye en de drunkenskap. (Vergelyk [[Dionysus]]). As so een gruup in trance wolden kummen, dan söypen se machtig vöäle beer of namen bepålde krüden en paddestolen. En künneden sy as van unwys tekeyr gån in de stryd. ''Tekeyr gån as een beyst''; dat is wal een gode bedüding dårvöär, want disse lüde kleydeden sich vake in hüden van bearen en eaverswynen. Se stelleden sich dan ouk vöär dat sy dat beyst echt waren. So as de wyking[[beserkers]]. Disse kearlsbunden waren elite-krygers. Mar ouk mosden sy samenwarken med sjamamen vöär rituelen. 
 
 Tydens de dunkerste dage van et jår smeareden sy hümsülv den kop swart med root en aske. Want dat beylden de douden uut, dee as rundwaren in dee tyd. So waren sy neet te herkennen as leavende lüde. In disse vermumming en drunkenskap raasden sy döär de busken en de gouwen hean. Maakten vöäl kabaal med hoarn bloazen, kettens en bellen, ümme so de kwåde krachten up ofstand te holden. Sy smearden sy junge dearntyns under et root en aske, ümme ear vrüchtbaarheyd te geaven, en via ear de grund.
