--- a/Juul.mw
+++ b/Juul.mw
@@ -29,7 +29,7 @@ In disse kolde dage kummet lüde by mekare ümme mekare geselskop te holden. Sy 
 Et burenvolk had van vöärend al syn oogst binnen ehaled, et vleisk in esolted en de deakentyns ebreied. Sy mosden de winter mar döär seen te kummen. Ümdat et kold en nat is buten, was et logisk dat sy binnen et was geselliger maakten. Med lichtyns en dennentakken. Want dennentakken blyvet et heyle jår gröön, en dat düt in de kolde dage u der an höägen dat et ooit wear gröön buten wörd. Et licht düt u höagen når de warmte van de sünne in et [[summer]]. Tydens disse twaalv dage wördden der dan ouk vöäl groute vüren an estöäken, en de heyle tyd verdan an-eholden. Want solange as den sünne neet skent, dan mütte wy et sülv mar doon. Nu noch wörd der in de noordske landen ''juulblokken'' ehakked en de heyle karsttyd up-estoaked. In de westerske landen heb y noch ait vöäle midwintervüren. In latere tyden güngen lüde dennenboumen in et huus halen. Ümdat dissend ait gröön bint en düt denken an den [[leavensboum]]. Dissend wörd noch ait in et huus etröyken en med gekleurde ballen en lichtyns up emooid.
 
 ==Vergelykings med andere traditys==
-Vöäle van disse gedachtenissen, gebruken en symbolen bint up vöäle steades up de wearld te vinden. En in et juulfeest heb y ouk verskillende traditys by mekare, so as wårskynlik elk feest en tradity uutendelik een mengelmoos is van verskillende dinge. As y byvöärbeeld kykt når de kearls dee as elk midwinter med derenhüden en hoarns up den kop rundzwarvet; dår bint al grotskilderings van bekend, dee stammet uut wat düsenden jåren eleaden. Vandage an den dag geböärt et noch, kyk mar når de [[Krampus|krampussen]] in de Alpen (Oustenryk) en de Swarte Peten in Neaderland. De greekske god Pan was een god den oaver de wilde deren heyrsten, en sag der uut as een halv menske, halv bok. So ouk de keltisken god Cernunnos, god van et wold, wilde deren en vrüchtbaarheid by kearls. Hy had een hertengewei up den kop.
+Vöäle van disse dachtenissen, gebruken en symbolen bint up vöäle steades up de wearld te vinden. En in et juulfeest heb y ouk verskillende traditys by mekare, so as wårskynlik elk feest en tradity uutendelik een mengelmoos is van verskillende dinge. As y byvöärbeeld kykt når de kearls dee as elk midwinter med derenhüden en hoarns up den kop rundzwarvet; dår bint al grotskilderings van bekend, dee stammet uut wat düsenden jåren eleaden. Vandage an den dag geböärt et noch, kyk mar når de [[Krampus|krampussen]] in de Alpen (Oustenryk) en de Swarte Peten in Neaderland. De greekske god Pan was een god den oaver de wilde deren heyrsten, en sag der uut as een halv menske, halv bok. So ouk de keltisken god Cernunnos, god van et wold, wilde deren en vrüchtbaarheid by kearls. Hy had een hertengewei up den kop.
 
 Groute vüren ansteaken dat geböärt sowal in de winter as in et vöärjår, oaver heyl Europa. 
 
