--- a/Juul.mw
+++ b/Juul.mw
@@ -15,7 +15,7 @@ Elk jår up [[old en ny]] gåt lüde in Europa kabaal maken med vüürwark en ka
 ===Verkleyden===
 In heyl Europa vind y rund disse tyd traditys, wår is lüde sich med root up den kop smearet. So wörden sy neet meyr herkent. In de Alpen heb y de krampussen, dee as med hoarns up den kop en groute bellen up de rügge de buul unveilig maket. In Düütskland heb y Knecht Ruprecht den nöäst Sankt Niklas löpt, as hülpyn. Den hevt een swarten kop, een lange jasse an en een rode in de handen. In Neaderland heb y Sünterklås en syn swarte peten. En so bint der noch meyr van disse soortgelyke gebruken.
 
-Tydens de dunkerste dage van et jår smeareden jungelingen hümsülv den kop swart med root en aske. Want dat beylden de douden uut, dee as rundwaren in dee tyd. So waren sy neet te herkennen as leavende lüde. In disse vermumming en drunkenskap raasden sy döär de busken en de gouwen hean. Maakten vöäl kabaal med hoarn bloazen, kettens en bellen, ümme so de kwåde krachten up ofstand te holden. Sy smearden sy junge dearntyns under et root en aske, ümme ear vrüchtbaarheyd te geaven, en via ear de grund.
+In de oldheid, tydens de dunkerste dage van et jår, smeareden jungelingen hümsülv den kop swart med root en aske. Want dat beylden de douden uut, dee as rundwaren in dee tyd. So waren sy neet te herkennen as leavende lüde. Sy döäden dan derenhüden ümme en hoarns of geweien op den kop. In disse vermumming en drunkenskap raasden sy döär de busken en de gouwen hean. Maakten vöäl kabaal med hoarn bloazen, kettens en bellen, ümme so de kwåde krachten up ofstand te holden. Sy smearden sy junge dearntyns under et root en aske, ümme ear vrüchtbaarheyd te geaven, en via ear de grund.
 
 In latere verhalen bint disse lüde noch ehöägend as ''[[De Wilde Jacht]]''.
 
