--- a/Juul.mw
+++ b/Juul.mw
@@ -20,7 +20,7 @@ In de oldheid, tydens de dunkerste dage van et jår, smeareden jungelingen hüms
 In latere verhalen bint disse lüde noch ehöägend as ''[[De Wilde Jacht]]''.
 
 ===Vüür===
-In olde tyden wördden up de körsten dag een grout ritueel vüür estöäken. Van disse båke güngen der når elk hüsyn een vüürtyn hean, ümme de kachel der med an te krygen. Disse vüren mosden al de twaalv nachten an eholden wörden. Anders had y unheil oaver u hean ehaled.
+In olde tyden wördden up de körtsten dag een grout ritueel vüür estöäken. Van disse båke güngen der når elk hüsyn een vüürtyn hean, ümme de kachel der med an te krygen. Disse vüren mosden al de twaalv nachten an eholden wörden. Anders had y unheil oaver u hean ehaled.
 
 ===Samen kummen===
 In disse kolde dage kummet lüde by mekare ümme mekare geselskop te holden. Sy gåt lekker eaten en supen. Döär amerikaanske invloden hevt et karstfeest dan ouk de beteakenisse ekreygen van by mekare kummen en lekker eaten. Nå mekare ümme kyken in disse tyd is noch belangryker dan anders. In de germaanske oldheid had y groute suupfeesten. Der wördden twaalv nachte lange alleyne mar edansed, esöypen en evryen by groute vüren. Sy offereden eaverswynen an den god Freyr, ümme et vervolgens up te eaten.
