--- a/Juul.mw
+++ b/Juul.mw
@@ -7,10 +7,10 @@ Der is neet so verskrikkelik vöäle van wys uut de germaanske oldheid, mar vand
 ==Grunddachtenisse==
 Geyneyne weat precys wår as et syn eyrste förm had, mar wårskynlik geyt et al wal düsenden jåren terügge en uut verskillende traditys ekummen. Et is in te denken dat, vöäral in de meyst noordske landen, de winters slim düüster en kold waren. Vroager waren sy vöäl [[Animisme|animistisk]] en [[Sjamanisme|sjamanistisk]] kwå wearldbekyk. Dat beteakend dat sy gelöyveden dat alles in de wearld een geyst of een leavenskracht had. Sjamanen waren de mensken dee as med disse geysten en krachten oaverweg könden. Der wörden gelöyved dat wanneyr as de bladergyns van de boumen vöylen en de deren vordtröyken, dat disse leavenskrachten uut de natuur tröyk. En dår reageyreden sy up döär disse leavenskrachten wearümme probeyren te krygen. So dat de plantyns wear gröiet en de sünne wearümme sol kummen. Nu bint der oaver heyl Europa en up vöäle andere steades up de wearld gebruken, dee te maken hebbet med et wearümme krygen van de vrüchtbaarheid. Net as by et keltiske [[Samhain]] wördden der edachted dat in disse düüsternisse van de winter de lyne med de andere wearlden kört was. Kwåde geysten en krachten künden in unse wearld kummen, mar ouk estürven vöärolder. De sünne is heyl noordelik sülvs vöär wat dage vord, wat lüde bange makeden dat y neet meyr terügge sol kummen. Noormannen vertelleden mekander dat der een unmundige wulv de sünne achterhean sat, en tydens juul sol hee hüm te pakken hebben.
 
-==Uplössing==
-
+==Uutvoring==
+===Uplössing===
 ===Kabaal maken===
-Elk jår up [[old en ny]] gåt lüde in Europa kabaal maken med vüürwark en karbit sketen. Vüürwark müt mooi weasen en karbit müt hard knappen. Et karbit sketen is een oust-neaderlandsk gebruuk, wat ouk in wat deylen in Düütskland geböäret. [[Midwinterhoarnblåsen]] wörd üm desülvde reyden (van vroager uut) ouk edåne. Want al disse förmen hebbet in disse tyd et dool ümme et kwåd vord te jagen en de sünne wearümme te ropen. Lös dårvan had de midwinterhoarn ouk deenst as berichten oaver verre te doon.
+Elk jår up [[old en ny]] gåt lüde in Europa kabaal maken med vüürwark en karbit sketen. Vüürwark müt mooi weasen en karbit müt hard knappen. Et karbit sketen is een oust-neaderlandsk gebruuk, wat ouk in wat deylen in Düütskland geböäret. [[Mirreweenterhoorn|Midwinterhoarnblåsen]] wörd üm desülvde reyden (van vroager uut) ouk edåne. Want al disse förmen hebbet in disse tyd et dool ümme et kwåd vord te jagen en de sünne wearümme te ropen. Lös dårvan had de midwinterhoarn ouk deenst as berichten oaver verre te doon.
 
 ===Verkleyden===
 In heyl Europa vind y rund disse tyd traditys, wår is lüde sich med root up den kop smearet. So wörden sy neet meyr herkent. In de Alpen heb y de krampussen, dee as med hoarns up den kop en groute bellen up de rügge de buul unveilig maket. In Düütskland heb y Knecht Ruprecht den nöäst Sankt Niklas löpt, as hülpyn. Den hevt een swarten kop, een lange jasse an en een rode in de handen. In Neaderland heb y Sünterklås en syn swarte peten. En so bint der noch meyr van disse soortgelyke gebruken.
@@ -20,7 +20,7 @@ In de oldheid, tydens de dunkerste dage van et jår, smeareden jungelingen hüms
 In latere verhalen bint disse lüde noch ehöägend as ''[[De Wilde Jacht]]''.
 
 ===Vüür===
-In olde tyden wördden up de körtsten dag een grout ritueel vüür estöäken. Van disse båke güngen der når elk hüsyn een vüürtyn hean, ümme de kachel der med an te krygen. Disse vüren mosden al de twaalv nachten an eholden wörden. Anders had y unheil oaver u hean ehaled.
+In olde tyden wördden up de körtsten dag een [[Boake|grout ritueel vüür]] estöäken. Van disse båke güngen der når elk hüsyn een vüürtyn hean, ümme de kachel der med an te krygen. Disse vüren mosden al de twaalv nachten an eholden wörden. Anders had y unheil oaver u hean ehaled.
 
 ===Samen kummen===
 In disse kolde dage kummet lüde by mekare ümme mekare geselskop te holden. Sy gåt lekker eaten en supen. Döär amerikaanske invloden hevt et karstfeest dan ouk de beteakenisse ekreygen van by mekare kummen en lekker eaten. Nå mekare ümme kyken in disse tyd is noch belangryker dan anders. In de germaanske oldheid had y groute suupfeesten. Der wördden twaalv nachte lange alleyne mar edansed, esöypen en evryen by groute vüren. Sy offereden eaverswynen an den god Freyr, ümme et vervolgens up te eaten.
