--- a/Juul.mw
+++ b/Juul.mw
@@ -12,7 +12,7 @@ Geyneyne weat precys wår as et syn eyrste förm had, mar wårskynlik geyt et al
 ===Kabaal maken===
 Elk jår up [[old en ny]] gåt lüde in Europa kabaal maken med vüürwark en karbit sketen. Vüürwark müt mooi weasen en karbit müt hard knappen. Et karbit sketen is een oust-neaderlandsk gebruuk, wat ouk in wat deylen in Düütskland geböäret. [[Mirreweenterhoorn|Midwinterhoarnblåsen]] wörd üm desülvde reyden (van vroager uut) ouk edåne. Want al disse förmen hebbet in disse tyd et dool ümme et kwåd vord te jagen en de sünne wearümme te ropen. Lös dårvan had de midwinterhoarn ouk deenst as berichten oaver verre te doon.
 
-===Verkleyden===
+===Verkleaden===
 In heyl Europa vind y rund disse tyd traditys, wår is lüde sich med root up den kop smearet. So wörden sy neet meyr herkent. In de Alpen heb y de krampussen, dee as med hoarns up den kop en groute bellen up de rügge de buul unveilig maket. In Düütskland heb y Knecht Ruprecht den nöäst Sankt Niklas löpt, as hülpyn. Den hevt een swarten kop, een lange jasse an en een rode in de handen. In Neaderland heb y Sünterklås en syn swarte peten. En so bint der noch meyr van disse soortgelyke gebruken.
 
 In de oldheid, tydens de dunkerste dage van et jår, smeareden jungelingen hümsülv den kop swart med root en aske. Want dat beylden de douden uut, dee as rundwaren in dee tyd. So waren sy neet te herkennen as leavende lüde. Sy döäden dan derenhüden ümme en hoarns of geweien op den kop. In disse vermumming en drunkenskap raasden sy döär de busken en de gouwen hean. Maakten vöäl kabaal med hoarn bloazen, kettens en bellen, ümme so de kwåde krachten up ofstand te holden. Sy smearden sy junge dearntyns under et root en aske, ümme ear vrüchtbaarheyd te geaven, en via ear de grund.
