*Empty MediaWiki Message*

--- a/Juul.mw
+++ b/Juul.mw
@@ -1,3 +1,5 @@
+{{Zie dv|'''''Juul(feest)''''' of '''''juultyd''''' kan ouk een andere benaming weasen vöär [[Kìrsttied|''karst'']].}}
+
 [[Bestaand:Chambers Yule Log.png|thumb|250px|Et juulblok wördt döär kearls uut et wold ehaald, de vrouwe van et huus (of dochter) stekt et blok an med holtskole van et juulblok van et vöärige jår, 1832]]
 
 '''Juul''' of '''midwinter''' bint de namen vöär et germaanske feest dat de [[zunnewende|wintersünnewende]] bevyrt. Et duurt twaalv nachten, en dårümme wördt et feest ouk wal med de ''Twaalv nachten'' an-edüded. Altyd begint et up de körtsten dag van et jår, wat in unse [[gregoriaanse kelender|gregoriaanske kalenderreakening]]  [[21 december]] is. Vanof dissen dag stopde vöär de germanen vöär twaalv nachten de tyd, ümme up 1 januåri wear in de nye tyd te kummen wår as de sünne sötys an wearümme kümt.
